# loxx_core

./: CMakeLists.txt  README.md  liechtenstein.osm.pbf
.github/workflows/: release-ios.yml
bindings/: README.md
bindings/ios/: INTEGRATION_GUIDE.md  Package.swift  QUICKSTART.md  README.md
bindings/ios/Examples/: README.md
bindings/ios/Examples/LoxxRouterDemo/: ContentView.swift  LoxxRouterDemoApp.swift
bindings/ios/Sources/LoxxRouter/: LoxxRouter.swift  LoxxRouterBridge+Swift.swift  MapLibreIntegration.swift
bindings/ios/Sources/LoxxRouterCore/: LoxxRouterBridge.mm
bindings/ios/Sources/LoxxRouterCore/include/: LoxxRouterBridge.h
bindings/ios/Tests/LoxxRouterTests/: LoxxRouterTests.swift
converter/: CMakeLists.txt
converter/src/: land_tile.fbs  main.cpp  pbf_reader.cpp  pbf_reader.h  serializer.cpp  serializer.h  sqlite_writer.cpp  sqlite_writer.h  tiler.h
core/: CMakeLists.txt
core/examples/: route_demo.cpp
core/include/routing_core/: edge_id.h  router.h  tile_store.h  tile_view.h  tiler.h
core/src/: router.cpp  tile_store.cpp
docs/: it_1_task_1.md  it_1_task_2.md  main_spec.md  plan.md
scripts/: build-ios-framework.sh
